# gen-pop-linkml2sheets

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py
src/gen_pop_linkml2sheets/: __init__.py  generate_and_populate_template.py
tests/: test_setup.py
